// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component should not render when open prop is falsy 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.6);
  z-index: 1000;
  display: none;
}

.c1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  background: #F7F7F7;
  padding: 32px 64px;
  border-radius: 5px;
  width: 50%;
  height: auto;
  max-height: 80%;
  overflow: hidden;
  overflow-y: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 {
  font-size: 24px;
  font-weight: 700;
  color: inherit;
}

.c4 {
  font-size: 30px;
  border: none;
  background: inherit;
  padding: 0px;
  margin-right: -24px;
}

.c2 {
  color: #012040;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <strong
          class="c3"
        >
          Add User
        </strong>
        <button
          class="c4"
          data-testid="modal-close-button"
        >
          ×
        </button>
      </div>
      <div
        class=""
      >
        Demo Content
      </div>
      <div
        class="c5"
      >
        Demo Actions
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal component should render properly when it is open 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.6);
  z-index: 1000;
  display: block;
}

.c1 {
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  background: #F7F7F7;
  padding: 32px 64px;
  border-radius: 5px;
  width: 50%;
  height: auto;
  max-height: 80%;
  overflow: hidden;
  overflow-y: auto;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 {
  font-size: 24px;
  font-weight: 700;
  color: inherit;
}

.c4 {
  font-size: 30px;
  border: none;
  background: inherit;
  padding: 0px;
  margin-right: -24px;
}

.c2 {
  color: #012040;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

<div>
  <div
    class="c0"
    open=""
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <strong
          class="c3"
        >
          Add User
        </strong>
        <button
          class="c4"
          data-testid="modal-close-button"
        >
          ×
        </button>
      </div>
      <div
        class=""
      >
        Demo Content
      </div>
      <div
        class="c5"
      >
        Demo Actions
      </div>
    </div>
  </div>
</div>
`;
